--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="nav">
       <ul class="nav-menu">
         <li id="profile"><a href="#">Profile</a></li>
-        <li><a href="#">Member</a></li>
+        <li id="menber"><a href="#">Member</a></li>
         <li><a href="#">Works</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -38,31 +38,44 @@
     </div>
   </div>
 
+  <div class="menber">
+    <h2>Menber</h2>
+    <div class="container">
+    </div>
+  </div>
+
   <script type="text/javascript">
-    let siteHeader = document.getElementsByClassName('site-header')[0];
-    let logo = document.getElementById('logo');
-    let profile = document.getElementById('profile');
+  let siteHeader = document.getElementsByClassName('site-header')[0];
+  let logo = document.getElementById('logo');
+  let profile = document.getElementById('profile');
+  let menber = document.getElementById('menber');
 
-    document.addEventListener('DOMContentLoaded', function() {
-      window.addEventListener('scroll', function() {
-        let y = window.pageYOffset;
-        if (y > 1) {
-          siteHeader.classList.add('transform');
-        } else {
-          siteHeader.classList.remove('transform');
-        }
-      },false);
+  document.addEventListener('DOMContentLoaded', function() {
+    window.addEventListener('scroll', function() {
+      let y = window.pageYOffset;
+      if (y > 1) {
+        siteHeader.classList.add('transform');
+      } else {
+        siteHeader.classList.remove('transform');
+      }
+    },false);
 
-      logo.addEventListener('click', function() {
-        scrollTo(0, 0);
-      },false);
+    logo.addEventListener('click', function() {
+      scrollTo(0, 0);
+    },false);
 
-      profile.addEventListener('click', function() {
-        console.log('hello');
-        scrollTo(0, 750);
+    profile.addEventListener('click', function() {
+      console.log('hello');
+      scrollTo(0, 750);
+    },false);
 
-      },false);
-    }, false);
+    menber.addEventListener('click', function() {
+      console.log('hello');
+      scrollTo(0, 1100);
+    },false);
+
+
+  }, false);
 
   </script>
 </body>
